--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5001
-MONGO_URI = mongodb+srv://shahid0324:w2043thime*@chatapp1.vggpo7b.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = ************************************************
 # WEATHER_KEY = bab80304409291a5a8bd6125b2a78e6a
 WEATHER_KEY = 38303cfcb9a2484f72beb0137e00825d
